log

Thu 14 Mar 2024 08:55:36 PM UTC: 
 exercises.c | 96 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 92 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:12: error: ‘arr1’ undeclared (first use in this function); did you mean ‘arr’?
   14 |   int MAX =arr1[0];
      |            ^~~~
      |            arr
exercises.c:14:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:15:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   15 |   for(int i=0, i<size,i++)
      |                 ^
exercises.c:27:3: error: expected expression before ‘return’
   27 |   return MAX;
      |   ^~~~~~
exercises.c:28:1: error: expected expression before ‘}’ token
   28 | }
      | ^
exercises.c:28:1: error: expected expression before ‘}’ token
exercises.c:15:11: error: unused variable ‘i’ [-Werror=unused-variable]
   15 |   for(int i=0, i<size,i++)
      |           ^
exercises.c:14:7: error: unused variable ‘MAX’ [-Werror=unused-variable]
   14 |   int MAX =arr1[0];
      |       ^~~
exercises.c: In function ‘reverseArray’:
exercises.c:38:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   38 |   for(int i=0, i<size/2, i++)
      |                 ^
exercises.c:46:1: error: expected expression before ‘}’ token
   46 | }
      | ^
exercises.c:46:1: error: expected expression before ‘}’ token
exercises.c:46:1: error: expected expression before ‘}’ token
exercises.c:38:11: error: unused variable ‘i’ [-Werror=unused-variable]
   38 |   for(int i=0, i<size/2, i++)
      |           ^
exercises.c:37:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   37 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:7: error: ‘i’ undeclared (first use in this function)
   60 |   for(i=0,i<size,i++)
      |       ^
exercises.c:60:10: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   60 |   for(i=0,i<size,i++)
      |          ^
exercises.c:60:17: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   60 |   for(i=0,i<size,i++)
      |                 ^
exercises.c:60:21: error: expected ‘;’ before ‘)’ token
   60 |   for(i=0,i<size,i++)
      |                     ^
      |                     ;
exercises.c:60:21: error: expected expression before ‘)’ token
exercises.c:71:10: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   71 |   for(i=0,i<size,i++)
      |          ^
exercises.c:71:17: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   71 |   for(i=0,i<size,i++)
      |                 ^
exercises.c:71:21: error: expected ‘;’ before ‘)’ token
   71 |   for(i=0,i<size,i++)
      |                     ^
      |                     ;
exercises.c:71:21: error: expected expression before ‘)’ token
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:104:5: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
  104 |     else
      |     ^~~~
exercises.c:106:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  106 |       j++;
      |       ^
exercises.c: In function ‘findMax’:
exercises.c:28:1: error: control reaches end of non-void function [-Werror=return-type]
   28 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1cd9c19
